Added environment variables; updated model relationships, controllers + README
